Fix calendar component not responsive

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -75,12 +75,6 @@
   blockquote {
     @apply mt-6 border-l-2 pl-6 italic;
   }
-  th {
-    @apply border px-4 py-2 text-left font-bold [&[align=center]]:text-center [&[align=right]]:text-right;
-  }
-  td {
-    @apply border px-4 py-2 text-left [&[align=center]]:text-center [&[align=right]]:text-right;
-  }
   ul {
     @apply my-6 ml-6 list-disc [&>li]:mt-2;
   }
